更新技术文档与readme文件